--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tsparticles/react": "^3.0.0",
     "fast-glob": "^3.3.3",
     "framer-motion": "^12.4.2",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
